# Project-2-OOP-Cars

./: CMakeLists.txt  Lab 6-7 Masini.sln  Lab 6-7 Masini.vcxproj  Lab 6-7 Masini.vcxproj.filters  main.cpp
.opencppcov/Lab 6-7 Masini/: Debug_x64.json
Headers/: Car.h  DTO.h  IteratorLDI.h  LDI.h  Repository.h  Service.h  Spalatorie.h  UI.h  Undo.h  Validator.h  tests.h
Sources/: Car.cpp  Repository.cpp  Service.cpp  Spalatorie.cpp  UI.cpp  Validator.cpp  tests.cpp
